--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.0-beta.2"
+    "@astrojs/solid-js": "^4.4.2",
+    "astro": "^5.0.0-beta.2",
+    "solid-js": "^1.8.23"
   }
 }
