--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^4.4.2",
+    "@astrojs/tailwind": "^5.1.1",
+    "@xterm/xterm": "^5.5.0",
     "astro": "^5.0.0-beta.2",
-    "solid-js": "^1.8.23"
+    "solid-js": "^1.8.23",
+    "tailwindcss": "^3.4.13"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
