--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "daisyui": "^4.12.10"
   }
 }
