--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@solidjs/router": "^0.14.7",
     "@xterm/xterm": "^5.5.0",
     "astro": "^5.0.0-beta.2",
     "solid-js": "^1.8.23",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "daisyui": "^4.12.10"
+    "daisyui": "^4.12.10",
+    "typescript": "^5.6.2"
   }
 }
