--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^4.4.2",
+    "@astrojs/solid-js": "^3.0.0-beta.2",
     "@astrojs/tailwind": "^5.1.1",
     "@solidjs/router": "^0.14.7",
     "@xterm/xterm": "^5.5.0",
-    "astro": "^5.0.0-beta.2",
+    "astro": "^5.0.0-beta.4",
     "solid-js": "^1.8.23",
     "tailwindcss": "^3.4.13"
   },
