--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^3.0.0-beta.2",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/solid-js": "^5.0.6",
     "@solidjs/router": "^0.14.7",
+    "@tailwindcss/vite": "^4.0.17",
     "@xterm/xterm": "^5.5.0",
-    "astro": "^5.0.0-beta.6",
+    "astro": "^5.5.5",
     "solid-js": "^1.8.23",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "daisyui": "^4.12.10",
+    "daisyui": "^5.0.9",
     "typescript": "^5.6.2"
   }
 }
